pin eslint dependency due to eslint/eslint#5476

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "coveralls": "*",
     "dependency-check": "*",
     "doctoc": "*",
-    "eslint": "*",
+    "eslint": "2.2.0",
     "isparta": "*",
     "rimraf": "*",
     "tap-spec": "*",
